--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -21,11 +21,23 @@
   {% endif %} #}
    
     <!-- Jumbotron Header -->
-    <header class="jumbotron my-4">
-      <h1 class="display-3">A Product orders!</h1>
-      <p class="lead">Purchasing products is very easy by selecting the products sold by a supplier and importing them to the purchase order. All available product information will be transferred to the purchase ordert.</p>
-      <a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+
+     <header class="jumbotron my-4">
+      <h1 class="display-3 text-info">A Product orders!</h1>
+      <p class="lead text-danger ">Purchasing products is very easy by selecting the products sold by a supplier and importing them to the purchase order. All available product information will be transferred to the purchase ordert.</p>
+      <div class="text-right">
+      <a class="navbar-brand" href="/">
+          <img  class="rounded-circle " src="/img/face.png" alt="logo" style="width:40px;">
+      </a>
+           <a class="navbar-brand" href="/">
+          <img  class="rounded-circle " src="/img/insta.jfif" alt="logo" style="width:40px;">
+      </a>
+           <a class="navbar-brand" href="/">
+          <img  class="rounded-circle " src="/img/twitter.png" alt="logo" style="width:40px;">
+      </a>
+      </div>
     </header>
+    
 
     <!-- Page Features -->
 
