--- a/app/Resources/views/partials/header.user.html.twig
+++ b/app/Resources/views/partials/header.user.html.twig
@@ -1,6 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/">Command Project</a>
+          <a class="navbar-brand" href="/">
+              <img  class="rounded-circle " src="/img/LOGO6.PNG" alt="logo" style="width:45px;">
+           </a>
+            <a class="navbar-brand" href="/"><b>Command Project</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                      <span class="navbar-toggler-icon"></span>
             </button>
@@ -11,20 +14,20 @@
           {% if app.user and app.user.deletedAt == null %}
               {% if is_granted('ROLE_ADMIN') %}
                      <li class="nav-item">
-                      <a class="nav-link" href="{{ path('new_produit')}}">New product</a>
+                      <a class="nav-link" href="{{ path('new_produit')}}"><b>New product</b></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ path('all_clients')}}">Our clients</a>
+                      <a class="nav-link" href="{{ path('all_clients')}}"><b>Our clients</b></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{{ path('all_commands')}}">All commands</a>
+                      <a class="nav-link" href="{{ path('all_commands')}}"><b>All commands</b></a>
                     </li>
               {% endif %}
               <li class="nav-item">
-                <a class="nav-link" href=" {{ path('client_page', {'id': app.user.id } ) }}">My commands</a>
+                <a class="nav-link" href=" {{ path('client_page', {'id': app.user.id } ) }}"><b>My commands</b></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href=" {{ path('user_profile',{"client": app.user.id}) }}">Settings</a>
+                <a class="nav-link" href=" {{ path('user_profile',{"client": app.user.id}) }}"><b>Settings</b></a>
               </li>
                 <li class="nav-item">
                   <a class="nav-link" href="{{ path('user_logout') }}">Log out</a>
