--- a/src/AppBundle/Resources/views/Client/lignesCommand.html.twig
+++ b/src/AppBundle/Resources/views/Client/lignesCommand.html.twig
@@ -37,7 +37,7 @@
         </tbody>
     </table>
        <div class="text-left">
-             <a  class="btn  btn-danger " href="{{ path('index_route') }}">
+             <a  class="btn  btn-danger " href="{{ path('client_page', {'id': app.user.id } ) }}">
                 <i class="fa fa-fast-backward"></i>
                  
             </a>
