--- a/src/AppBundle/Resources/views/ProduitsController/allClients.html.twig
+++ b/src/AppBundle/Resources/views/ProduitsController/allClients.html.twig
@@ -28,7 +28,11 @@
                 <button class="delete btn btn-danger text-white text-right" 
                             data="{{client.id}}" {# href="{{ path('command_encours',{'id': command.id })}}" #}>
                             <i class="fas fa-trash-alt"></i>
-                    </button>
+                </button>
+                <a class="btn btn-info text-white text-right" 
+                            {#data="{{client.id}}"#}  href=" {{ path('user_profile',{"client": app.user.id}) }}" >
+                            <i class="fas fa-eye"></i>
+                </a>
            </td>
             </tr>
     {% endfor %}   
