--- a/src/AppBundle/Resources/views/ProduitsController/login.html.twig
+++ b/src/AppBundle/Resources/views/ProduitsController/login.html.twig
@@ -22,13 +22,13 @@
 {% block body %}
       <div class="container spacer col-md-6 col-xs-6 col-md-offset-3 ">
 		
-			<div class="card bg-warning text-white text-center"><h1>Log In</h1>
+			<div class="card bg-info text-white text-center"><h1>Log In</h1>
 			</div><br><br>
     <!--div class="row mt-5"-->
             <!--div class="col-6 offset-3"-->
             				<div class="text-center">
-		    	          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRFL5a-Wu4QKXY3ZRydXjl8roP-kX7mvyB25kD0X0lY2QhPfZBY&usqp=CAU" width="20%" hieght="20%" >
-			      	</div>
+		    	            <img src="/img/login.jfif" width="20%" hieght="20%" >
+			      	      </div>
                     {% if error %}
                         <div class="alert alert-danger">Your email ou password is invalid !!!</div>
                     {% endif %}
