--- a/src/AppBundle/Resources/views/ProduitsController/profile.html.twig
+++ b/src/AppBundle/Resources/views/ProduitsController/profile.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
  <div class="container spacer col-md-6 col-xs-6 col-md-offset-3 ">
 		
-			<div class="card bg-secondary text-white text-center"><h1>Edit Profil</h1>
+			<div class="card bg-info text-white text-center"><h1>Edit Profil</h1>
 			</div><br><br>
 
     {{ form_start(form) }}
@@ -12,10 +12,13 @@
     <div class="text-center">
     <div class="d-inline-block form-group">
         <a class=" btn btn-warning text-white" href="{{ path('user_password') }}"><i class="fa fa-edit"></i>Edit password</a>
-    </div>
+    </div><br>
 
     <div class="d-inline-block form-group">
         <button type="submit" class=" btn btn-primary"><i class="fa fa-save"></i>      Save</button>
+    </div>
+    <div class="d-inline-block form-group">
+        <a  class=" btn btn-danger" href="{{ path('all_clients')}}"><i class=" fa fa-backward" ></i>      Back</a>
     </div>
     </div>
     {{ form_end(form)}}
