--- a/src/AppBundle/Resources/views/ProduitsController/signin.html.twig
+++ b/src/AppBundle/Resources/views/ProduitsController/signin.html.twig
@@ -23,11 +23,11 @@
 {% block body %}
 <div class="container spacer col-md-6 col-xs-6 col-md-offset-3 ">
 		
-			<div class="card bg-warning text-white text-center"><h1>Sign In</h1>
-			</div><br><br>
-
- 
-            <!--div class="col-md-6 offset-md-3"-->
+			<div class="card bg-info text-white text-center"><h1>Sign In</h1>
+			</div>
+      	<div class="text-center">
+		    	  <img src="/img/add.png" width="20%" hieght="20%" >
+			  </div>
       {{ form_start(form) }}
       {{ form_widget(form) }} 
       <div class="text-center">
