--- a/src/AppBundle/Resources/views/ProduitsController/profilePass.html.twig
+++ b/src/AppBundle/Resources/views/ProduitsController/profilePass.html.twig
@@ -5,7 +5,7 @@
 
 <div class="container spacer col-md-6 col-xs-6 col-md-offset-3 ">
 		
-	<div class="card bg-secondary text-white text-center"><h1>Edit your password</h1>
+	<div class="card bg-info text-white text-center"><h1>Edit your password</h1>
 	</div><br><br>
 
     {{ form_start(form) }}
